--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   line_icons: ^2.0.1
   carousel_slider: ^4.1.1
   http: ^0.13.5
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
